deploy: 293ac409e1c808d3eea396bd8666a28ab2819292

--- a/rhods-model/1.33/index.html
+++ b/rhods-model/1.33/index.html
@@ -46,16 +46,13 @@
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="chapter1/index.html">Chapter 1</a>
+    <a class="nav-link" href="chapter1/index.html">Introduction to Machine Learning</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter1/section1.html">Section 1</a>
+    <a class="nav-link" href="chapter1/section1.html">Machine Learning Concepts</a>
   </li>
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter1/section2.html">Section 2</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter1/section3.html">Section 3</a>
+    <a class="nav-link" href="chapter1/section2.html">ML Workflow</a>
   </li>
 </ul>
   </li>
@@ -65,10 +62,16 @@
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="chapter2/index.html">Chapter 2</a>
+    <a class="nav-link" href="chapter2/index.html">Create and save a Pytorch model</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter2/section1.html">Section 1</a>
+    <a class="nav-link" href="chapter2/section1.html">RHODS</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter2/section2.html">Data Exploration</a>
+  </li>
+  <li class="nav-item" data-depth="2">
+    <a class="nav-link" href="chapter2/section3.html">Create a model</a>
   </li>
 </ul>
   </li>
@@ -78,7 +81,7 @@
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="chapter3/index.html">Chapter 3</a>
+    <a class="nav-link" href="chapter3/index.html">Load a ML model and perform Hyperparameter tuning</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="chapter3/section1.html">Section 1</a>
@@ -93,7 +96,7 @@
   <li class="nav-item" data-depth="0">
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="appendix/appendix.html">Appendix A</a>
+    <a class="nav-link" href="appendix/appendix.html">Appendix</a>
   </li>
 </ul>
   </li>
@@ -136,16 +139,9 @@
 </aside>
 <article class="doc">
 <h1 class="page">Creating Machine Learning Models with Red Hat OpenShift Data Science</h1>
-<div class="sect1">
-<h2 id="_introduction"><a class="anchor" href="#_introduction"></a>Introduction</h2>
-<div class="sectionbody">
-<div class="paragraph">
-<p>This is an example quick course demonstrating the usage of Antora for authoring and publishing quick courses.</p>
-</div>
-</div>
-</div>
+
 <nav class="pagination">
-  <span class="next"><a href="chapter1/index.html">Chapter 1</a></span>
+  <span class="next"><a href="chapter1/index.html">Introduction to Machine Learning</a></span>
 </nav>
 </article>
   </div>
