--- a/rhods-model/1.33/index.html
+++ b/rhods-model/1.33/index.html
@@ -62,10 +62,10 @@
 <ul class="nav-list">
   <li class="nav-item" data-depth="1">
     <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="chapter2/index.html">Create and save a Pytorch model</a>
+    <a class="nav-link" href="chapter2/index.html">Create and Save a PyTorch Model</a>
 <ul class="nav-list">
   <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter2/section1.html">RHODS</a>
+    <a class="nav-link" href="chapter2/section1.html">Setup</a>
   </li>
   <li class="nav-item" data-depth="2">
     <a class="nav-link" href="chapter2/section2.html">Data Exploration</a>
@@ -74,29 +74,6 @@
     <a class="nav-link" href="chapter2/section3.html">Create a model</a>
   </li>
 </ul>
-  </li>
-</ul>
-  </li>
-  <li class="nav-item" data-depth="0">
-<ul class="nav-list">
-  <li class="nav-item" data-depth="1">
-    <button class="nav-item-toggle"></button>
-    <a class="nav-link" href="chapter3/index.html">Load a ML model and perform Hyperparameter tuning</a>
-<ul class="nav-list">
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter3/section1.html">Section 1</a>
-  </li>
-  <li class="nav-item" data-depth="2">
-    <a class="nav-link" href="chapter3/section2.html">Section 2</a>
-  </li>
-</ul>
-  </li>
-</ul>
-  </li>
-  <li class="nav-item" data-depth="0">
-<ul class="nav-list">
-  <li class="nav-item" data-depth="1">
-    <a class="nav-link" href="appendix/appendix.html">Appendix</a>
   </li>
 </ul>
   </li>
@@ -139,7 +116,143 @@
 </aside>
 <article class="doc">
 <h1 class="page">Creating Machine Learning Models with Red Hat OpenShift Data Science</h1>
-
+<div id="preamble">
+<div class="sectionbody">
+<div class="paragraph">
+<p>Welcome to this quick course on the <em>Creating Machine Learning Models with Red Hat OpenShift Data Science</em>.
+This course is the fourth in a series of 6 courses about Red Hat OpenShift Data Science:</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p><a href="https://redhatquickcourses.github.io/rhods-intro">Introduction to Red Hat OpenShift Data Science</a></p>
+</li>
+<li>
+<p><a href="https://redhatquickcourses.github.io/rhods-admin">Red Hat OpenShift Data Science Administration</a></p>
+</li>
+<li>
+<p><a href="https://redhatquickcourses.github.io/rhods-analysis">Data Analysis and Visualization with Red Hat OpenShift Data Science</a></p>
+</li>
+<li>
+<p>Creating Machine Learning Models with Red Hat OpenShift Data Science (<em>This course</em>)</p>
+</li>
+<li>
+<p><a href="https://redhatquickcourses.github.io/rhods-deploy">Machine Learning Models with Red Hat OpenShift Data Science</a></p>
+</li>
+<li>
+<p><a href="https://redhatquickcourses.github.io/rhods-pipelines">Automation using Data Science Pipelines</a></p>
+</li>
+</ol>
+</div>
+<div class="admonitionblock note">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-note" title="Note"></i>
+</td>
+<td class="content">
+After you have completed all the courses in the learning path, you can attempt the <a href="https://github.com/RedHatQuickCourses/rhods-qc-apps/tree/main/7.hands-on-lab">"Hit the RHODS"</a> exercise, that tests your understanding of the concepts taught in all the courses.
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_authors"><a class="anchor" href="#_authors"></a>Authors</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>The PTL team acknowledges the valuable contributions of the following Red Hat associates:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Satyajit Lele</p>
+</li>
+<li>
+<p>Jaime Ramirez Castillo</p>
+</li>
+<li>
+<p>Max Murakami</p>
+</li>
+<li>
+<p>Sara Banderby</p>
+</li>
+<li>
+<p>Ravi Srinivasan</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_classroom_environment"><a class="anchor" href="#_classroom_environment"></a>Classroom Environment</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>There are two options, based on whether you are taking this course standalone (just this course), or as part of the full 6 course learning path where you installed RHODS on an OpenShift cluster in the second course in the learning path, <em>Red Hat OpenShift Data Science Administration</em>.</p>
+</div>
+<div class="sect2">
+<h3 id="_option_1_standalone_rhods_pre_installed_on_openshift"><a class="anchor" href="#_option_1_standalone_rhods_pre_installed_on_openshift"></a>Option 1: Standalone (RHODS Pre-installed on OpenShift)</h3>
+<div class="paragraph">
+<p>You will use the <a href="https://demo.redhat.com/catalog?search=openshift+data+science&amp;item=babylon-catalog-prod%2Fsandboxes-gpte.ocp4-workshop-rhods-base-aws.prod">Base RHODS on AWS</a> catalog item in the Red Hat Demo Platform (RHDP) to run the hands on exercises in this course.</p>
+</div>
+<div class="paragraph">
+<p>This classroom has a pre-installed version of Red Hat OpenShift Data Science on OpenShift.</p>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_option_2_six_course_learning_path"><a class="anchor" href="#_option_2_six_course_learning_path"></a>Option 2: Six Course Learning Path</h3>
+<div class="paragraph">
+<p>Continue using the <a href="https://demo.redhat.com/catalog?search=Red+Hat+OpenShift+Container+Platform+4.13+Workshop&amp;item=babylon-catalog-prod%2Fopenshift-cnv.ocp413-wksp-cnv.prod">Red Hat OpenShift Container Platform 4.13 Workshop</a> catalog item from the <em>Red Hat OpenShift Data Science Administration</em> course.</p>
+</div>
+<div class="paragraph">
+<p>This classroom does <strong>NOT</strong> have RHODS pre-installed. You are expected to complete the <em>Red Hat OpenShift Data Science Administration</em> course, where you install and configure a basic RHODS instance, and then continue with this course.</p>
+</div>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_prerequisites"><a class="anchor" href="#_prerequisites"></a>Prerequisites</h2>
+<div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p>Take the Introduction to <a href="https://www.redhat.com/en/services/training/ad141-red-hat-training-presents-introduction-to-python-programming">Python Programming (AD141)</a> training course or demonstrate equivalent knowledge of Python programming</p>
+</li>
+<li>
+<p>Basic knowledge of machine learning foundations is recommended.</p>
+</li>
+<li>
+<p>Basic knowledge of the PyTorch Python library for machine learning and deep learning.</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_objectives"><a class="anchor" href="#_objectives"></a>Objectives</h2>
+<div class="sectionbody">
+<div class="paragraph">
+<p>The overall objectives of this introductory course include:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Describe basic machine learning concepts</p>
+</li>
+<li>
+<p>Describe the different types of machine learning</p>
+</li>
+<li>
+<p>Create and train machine learning models</p>
+</li>
+<li>
+<p>Machine Learning Workflows</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
 <nav class="pagination">
   <span class="next"><a href="chapter1/index.html">Introduction to Machine Learning</a></span>
 </nav>
