deploy: cc9b637371fe363652053c326785479f2c428df5

--- a/rhods-model/1.33/index.html
+++ b/rhods-model/1.33/index.html
@@ -137,7 +137,7 @@ This course is the fourth in a series of 6 courses about Red Hat OpenShift Data 
 <p>Creating Machine Learning Models with Red Hat OpenShift Data Science (<em>This course</em>)</p>
 </li>
 <li>
-<p><a href="https://redhatquickcourses.github.io/rhods-deploy">Machine Learning Models with Red Hat OpenShift Data Science</a></p>
+<p><a href="https://redhatquickcourses.github.io/rhods-deploy">Deploying Machine Learning Models with Red Hat OpenShift Data Science</a></p>
 </li>
 <li>
 <p><a href="https://redhatquickcourses.github.io/rhods-pipelines">Automation using Data Science Pipelines</a></p>
