--- a/rhods-model/1.33/index.html
+++ b/rhods-model/1.33/index.html
@@ -125,19 +125,19 @@ This course is the <strong>third</strong> in a series of <strong>five</strong> c
 <div class="olist arabic">
 <ol class="arabic">
 <li>
-<p><a href="https://redhatquickcourses.github.io/RHOAI-intro">Introduction to Red Hat OpenShift AI</a></p>
+<p><a href="https://redhatquickcourses.github.io/rhods-intro">Introduction to Red Hat OpenShift AI</a></p>
 </li>
 <li>
-<p><a href="https://redhatquickcourses.github.io/RHOAI-admin">Red Hat OpenShift AI Administration</a></p>
+<p><a href="https://redhatquickcourses.github.io/rhods-admin">Red Hat OpenShift AI Administration</a></p>
 </li>
 <li>
 <p>Creating Machine Learning Models with Red Hat OpenShift Data Science (<em>This course</em>)</p>
 </li>
 <li>
-<p><a href="https://redhatquickcourses.github.io/RHOAI-deploy">Deploying Machine Learning Models with Red Hat OpenShift AI</a></p>
+<p><a href="https://redhatquickcourses.github.io/rhods-deploy">Deploying Machine Learning Models with Red Hat OpenShift AI</a></p>
 </li>
 <li>
-<p><a href="https://redhatquickcourses.github.io/RHOAI-pipelines">Automation using Data Science Pipelines</a></p>
+<p><a href="https://redhatquickcourses.github.io/rhods-pipelines">Automation using Data Science Pipelines</a></p>
 </li>
 </ol>
 </div>
@@ -148,7 +148,7 @@ This course is the <strong>third</strong> in a series of <strong>five</strong> c
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-After you have completed all the courses in the learning path, you can attempt the <a href="https://github.com/RedHatQuickCourses/RHOAI-qc-apps/tree/main/7.hands-on-lab">"Hit the RHOAI"</a> exercise, that tests your understanding of the concepts taught in all the courses.
+After you have completed all the courses in the learning path, you can attempt the <a href="https://github.com/RedHatQuickCourses/rhods-qc-apps/tree/main/7.hands-on-lab">"Hit the RHOAI"</a> exercise, that tests your understanding of the concepts taught in all the courses.
 </td>
 </tr>
 </table>
