--- a/rhods-model/1.33/index.html
+++ b/rhods-model/1.33/index.html
@@ -148,7 +148,7 @@ This course is the <strong>third</strong> in a series of <strong>five</strong> c
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-After you have completed all the courses in the learning path, you can attempt the <a href="https://github.com/RedHatQuickCourses/rhods-qc-apps/tree/main/7.hands-on-lab">"Hit the RHOAI"</a> exercise, that tests your understanding of the concepts taught in all the courses.
+After you have completed all the courses in the learning path, you can attempt the <a href="https://github.com/RedHatQuickCourses/rhods-qc-apps/tree/main/7.hands-on-lab">"Workshop FInal Lab"</a> exercise, that tests your understanding of the concepts taught in all the courses.
 </td>
 </tr>
 </table>
