deploy: d96557213e344f83fcb17ea2ffb685167cf5e253

--- a/rhods-model/1.33/index.html
+++ b/rhods-model/1.33/index.html
@@ -210,7 +210,7 @@ After you have completed all the courses in the learning path, you can attempt t
 <div class="ulist">
 <ul>
 <li>
-<p>Take the Introduction to <a href="https://www.redhat.com/en/services/training/ad141-red-hat-training-presents-introduction-to-python-programming">Python Programming (AD141)</a> training course or demonstrate equivalent knowledge of Python programming</p>
+<p>Take the Introduction to <a href="https://www.redhat.com/en/services/training/ad141-red-hat-training-presents-introduction-to-python-programming">Python Programming (AD141)</a> training course or demonstrate equivalent knowledge of Python programming.</p>
 </li>
 <li>
 <p>Basic knowledge of machine learning foundations is recommended.</p>
@@ -240,7 +240,7 @@ After you have completed all the courses in the learning path, you can attempt t
 <p>Create and train machine learning models</p>
 </li>
 <li>
-<p>Machine Learning Workflows</p>
+<p>Learn about the Machine Learning Workflows</p>
 </li>
 </ul>
 </div>
